# kafka_flink_python

./: .env  pyproject.toml
src/kafka-flink/: flink_processor.py  kafka_producer.py
