[tool.poetry]
name = "kafka-flink-python"
version = "0.1.0"
description = ""
authors = ["Reynaldo Gil <gilcu2@gmail.com>"]
readme = "README.md"
packages = [{include = "kafka_flink_python"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
confluent-kafka = "^2.1.1"
faker = "^18.10.1"
kafka = "^1.3.5"
apache-flink = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
